tests/ui/traits/dyn-star-drop-principal.stderr
error[E0277]: `dyn* Trait + Send` needs to have the same ABI as a pointer
  --> $DIR/dyn-star-drop-principal.rs:11:5
   |
LL |     x as dyn* Send;
   |     ^ `dyn* Trait + Send` needs to be a pointer-like type
   |
   = help: the trait `PointerLike` is not implemented for `dyn* Trait + Send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
